# ProMentum

./: .gitignore  LICENSE  README.md  START_ProMentum_WINDOWS.bat  pyproject.toml
.github/workflows/: ci.yml
docs/: FEEDBACK_TEMPLATE.md  TESTER_CHECKLIST.md  UX_SMOKE_CHECKLIST.md
docs/demo-bench/: 01-sketch-hook-101.txt  02-video-idea-202.txt  03-title-storm-303.txt  04-scene-seed-404.txt  05-concept-mashup-505.txt  06-personal-myth-606.txt  07-serious-to-absurd-707.txt  08-sketch-hook-808.txt  09-video-idea-909.txt  10-title-storm-1001.txt  11-scene-seed-1102.txt  12-concept-mashup-1203.txt  13-personal-myth-1304.txt  14-serious-to-absurd-1405.txt  15-sketch-hook-1506.txt  16-video-idea-1607.txt  17-title-storm-1708.txt  18-scene-seed-1809.txt  19-concept-mashup-1910.txt  20-personal-myth-2011.txt  21-serious-to-absurd-2112.txt  22-sketch-hook-2213.txt  23-video-idea-2314.txt  24-title-storm-2415.txt  25-scene-seed-2516.txt  26-concept-mashup-2617.txt  27-personal-myth-2718.txt  28-serious-to-absurd-2819.txt  README.md
docs/release-notes/: v0.1.3.md  v0.2.0.md  v0.3.0.md  v0.3.1.md
idea_collider_app/: __init__.py  app.py  engine.py  storage.py
idea_collider_app/seeds/: default_idea_bank.json
idea_collider_app/static/: app.css  app.js
idea_collider_app/templates/: index.html
scripts/: make_release_zip.ps1  sample_collisions.py  stop_dev_processes.ps1  verify_release_zip.ps1
tests/: test_app_smoke.py  test_engine.py  test_release_scripts.py  test_storage.py
